--- a/HealthTrackerApp/src/main/resources/main_menu.fxml
+++ b/HealthTrackerApp/src/main/resources/main_menu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -12,8 +13,6 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -34,7 +33,9 @@
       </GridPane>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
          <children>
-            <Label text="Username:" />
+            <Label text="Firstname:" />
+            <TextField />
+            <Label text="Surname:" />
             <TextField />
          </children>
          <padding>
@@ -43,26 +44,59 @@
       </HBox>
       <HBox alignment="CENTER" layoutX="10.0" layoutY="100.0" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
          <children>
-            <Label text="Password:" />
-            <PasswordField />
-         </children>
-         <padding>
-            <Insets left="10.0" />
-         </padding>
-      </HBox>
-      <HBox alignment="CENTER" layoutX="10.0" layoutY="140.0" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
-         <children>
-            <Label text="E-mail:" />
+            <Label text="Username:" />
+            <TextField />
+            <Label layoutX="128.0" layoutY="22.0" text="Email:" />
             <TextField />
          </children>
          <padding>
             <Insets left="10.0" />
          </padding>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <HBox alignment="CENTER" layoutX="10.0" layoutY="140.0" prefHeight="47.0" prefWidth="597.0" spacing="10.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#changeScene" text="Register" />
+            <Label text="Password:" />
+            <PasswordField />
+            <Label text="Password Verification:" />
+            <PasswordField layoutX="130.0" layoutY="21.0" />
          </children>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
       </HBox>
+      <HBox alignment="CENTER" prefHeight="75.0" prefWidth="600.0" spacing="10.0">
+         <children>
+            <Label text="Weight (Stone):" />
+            <Spinner fx:id="weightStoneSpinner" editable="true" onMouseClicked="#spinnerClick">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </Spinner>
+            <Label text="Weight (Pounds):" />
+            <Spinner fx:id="weightPoundsSpinner" editable="true" onMouseClicked="#spinnerClick">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></Spinner>
+         </children>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </HBox>
+      <HBox alignment="CENTER" layoutX="10.0" layoutY="167.0" prefHeight="75.0" prefWidth="600.0" spacing="10.0">
+         <children>
+            <Label text="Gender:" />
+            <ChoiceBox fx:id="genderBox" prefWidth="150.0" />
+            <Label layoutX="253.0" layoutY="39.0" text="Height (cm):" />
+            <Spinner fx:id="heightSpinner" editable="true" onMouseClicked="#spinnerClick">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </Spinner>
+         </children>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </HBox>
+      <Button mnemonicParsing="false" onAction="#changeScene" text="Register" />
    </children>
 </VBox>
