--- a/HealthTrackerApp/src/main/resources/main_menu.fxml
+++ b/HealthTrackerApp/src/main/resources/main_menu.fxml
@@ -25,7 +25,7 @@
             </ToolBar>
             <ToolBar prefHeight="40.0" prefWidth="352.0">
               <items>
-                <Button mnemonicParsing="false" onAction="#changeScene" text="Register" />
+                <Button mnemonicParsing="false" text="Register" />
                   <Button mnemonicParsing="false" text="Log in" />
               </items>
             </ToolBar>
@@ -34,9 +34,9 @@
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
          <children>
             <Label text="Firstname:" />
-            <TextField />
+            <TextField fx:id="firstnameText" />
             <Label text="Surname:" />
-            <TextField />
+            <TextField fx:id="surnameText" />
          </children>
          <padding>
             <Insets left="10.0" />
@@ -45,9 +45,9 @@
       <HBox alignment="CENTER" layoutX="10.0" layoutY="100.0" prefHeight="40.0" prefWidth="600.0" spacing="10.0">
          <children>
             <Label text="Username:" />
-            <TextField />
+            <TextField fx:id="usernameText" />
             <Label layoutX="128.0" layoutY="22.0" text="Email:" />
-            <TextField />
+            <TextField fx:id="emailText" />
          </children>
          <padding>
             <Insets left="10.0" />
@@ -56,9 +56,9 @@
       <HBox alignment="CENTER" layoutX="10.0" layoutY="140.0" prefHeight="47.0" prefWidth="597.0" spacing="10.0">
          <children>
             <Label text="Password:" />
-            <PasswordField />
+            <PasswordField fx:id="passwordText" />
             <Label text="Password Verification:" />
-            <PasswordField layoutX="130.0" layoutY="21.0" />
+            <PasswordField fx:id="passwordVerificationText" layoutX="130.0" layoutY="21.0" />
          </children>
          <padding>
             <Insets left="10.0" />
@@ -67,13 +67,13 @@
       <HBox alignment="CENTER" prefHeight="75.0" prefWidth="600.0" spacing="10.0">
          <children>
             <Label text="Weight (Stone):" />
-            <Spinner fx:id="weightStoneSpinner" editable="true" onMouseClicked="#spinnerClick">
+            <Spinner fx:id="weightStoneSpinner" editable="true">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
             </Spinner>
             <Label text="Weight (Pounds):" />
-            <Spinner fx:id="weightPoundsSpinner" editable="true" onMouseClicked="#spinnerClick">
+            <Spinner fx:id="weightPoundsSpinner" editable="true">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor></Spinner>
@@ -87,7 +87,7 @@
             <Label text="Gender:" />
             <ChoiceBox fx:id="genderBox" prefWidth="150.0" />
             <Label layoutX="253.0" layoutY="39.0" text="Height (cm):" />
-            <Spinner fx:id="heightSpinner" editable="true" onMouseClicked="#spinnerClick">
+            <Spinner fx:id="heightSpinner" editable="true">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
@@ -97,6 +97,13 @@
             <Insets left="10.0" />
          </padding>
       </HBox>
-      <Button mnemonicParsing="false" onAction="#changeScene" text="Register" />
+      <HBox alignment="CENTER" layoutX="10.0" layoutY="237.0" prefHeight="75.0" prefWidth="600.0" spacing="10.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#registerAccount" prefHeight="25.0" prefWidth="176.0" text="Register" />
+         </children>
+         <padding>
+            <Insets left="10.0" />
+         </padding>
+      </HBox>
    </children>
 </VBox>
