--- a/HealthTrackerApp/src/main/resources/view_activities.fxml
+++ b/HealthTrackerApp/src/main/resources/view_activities.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewActivitiesController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewActivitiesController">
    <children>
        <GridPane alignment="CENTER">
            <columnConstraints>
@@ -35,7 +35,7 @@
             <Point3D />
          </rotationAxis>
        </GridPane>
-       <Label alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="graphLabel">
+       <Label fx:id="graphLabel" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <text>Line Graph (Empty)</text>
            <padding>
                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -46,21 +46,21 @@
       </Label>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <LineChart AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="exerciseLineChart">
+            <LineChart fx:id="exerciseLineChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <xAxis>
-                <CategoryAxis side="BOTTOM"/>
+                <CategoryAxis side="BOTTOM" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT"/>
+                <NumberAxis side="LEFT" />
               </yAxis>
             </LineChart>
          </children>
       </AnchorPane>
        <HBox alignment="CENTER" spacing="25.0">
            <children>
-               <DatePicker promptText="From" fx:id="dateFrom"/>
-               <DatePicker promptText="To" fx:id="dateTo"/>
-               <Button mnemonicParsing="false" text="View Activities" onAction="#changeDateRange"/>
+               <DatePicker fx:id="dateFrom" promptText="From" />
+               <DatePicker fx:id="dateTo" promptText="To" />
+               <Button mnemonicParsing="false" onAction="#changeDateRange" text="View Activities" />
            </children>
          <padding>
             <Insets bottom="5.0" top="5.0" />
